This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
2/7/23: Fixed ReadOtherFile command reading from montage (In 4.0).

2/7/23: Fixed memory leak in pixel size routine, used when Hole Finder is run
from the dialog (In 4.0).

2/7/23: Fixed Hole Finder not applying montage adjustments to positions when
the montage is not a map (In 4.0).

2/2/23: SEM_4-0-19
2/2/23: Fixed bad image shifts when changing EFTEM, broken 1/29/23 (In 4.0).

1/30/23: Fixed small error in IS vectors from hole vectors (In 4.0).

1/29/23: SEM_4-0-18
1/29/23: Fixed so that correct image shift offset calibration is used
when starting with a GIF camera or switching between cameras; for FEI scopes,
made it retain position when switching between GIF and nonGIF (In 4.0).

1/27/23: Made error message include the line that is bad when there is an
error reading a Navigator file in autodoc format (In 4.0).

1/27/23: Fixed bad zoom being set when reading in an image acquired on a
camera not defined in current properties (In 4.0).

1/19/23: Fixed crash when collapsing Navigator groups right after adding a
grid of points (In 4.0).

1/19/23: Fixed ability to set axis rotation with mouse click in a Search image
when Trial/Focus area is being defined (In 4.0).

1/19/23: Fixed errors that occur when a camera shot is started immediately
after clicking the mag or spot spinner in the scpoe control panel (In 4.0).

1/18/23: Fixed missing the last autoloader slot when getting the inventory on
a JEOL (In 4.0).

1/18/23: Fixed binning spinner in autocenter setup dialog going past end of
range (In 4.0).

1/16/23: Fixed OpenOldFile command with HDF file (In 4.0).

1/13/23: SEM_4-0-17
1/13/23: Started writing a file along with the Navigator file, named