@@ -3,6 +3,9 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+2/11/23: Made precombine.holes file not be written on an autosave, so that the
+Undo button stays enabled (In 4.0).
+
 2/7/23: Fixed ReadOtherFile command reading from montage (In 4.0).
 
 2/7/23: Fixed memory leak in pixel size routine, used when Hole Finder is run
